# Logtra

./: CMakeLists.txt
Logtra/: CMakeLists.txt
Logtra/src/: Logger.cpp  Logger.h
Sandbox/: CMakeLists.txt  Sandbox.cpp
src/: CMakeLists.txt  Logger.cpp
